rustdocs/errors/rust-bitcoin-units-src-amount-serde.rs.txt
error[E0432]: unresolved import `serde`
  --> ../rust-bitcoin/units/src/amount/serde.rs:63:9
   |
63 |     use serde::{Deserialize, Deserializer, Serialize, Serializer};
   |         ^^^^^ use of unresolved module or unlinked crate `serde`
   |
help: you might be missing a crate named `serde`, add it to your project and import it in your code
   |
25 + extern crate serde;
   |

error[E0432]: unresolved import `crate::SignedAmount`
  --> ../rust-bitcoin/units/src/amount/serde.rs:65:9
   |
65 |     use crate::SignedAmount;
   |         ^^^^^^^^^^^^^^^^^^^ no `SignedAmount` in the root

error[E0433]: failed to resolve: you might be missing crate `core`
  --> ../rust-bitcoin/units/src/amount/serde.rs:93:13
   |
93 |         use core::marker::PhantomData;
   |             ^^^^
   |             |
   |             you might be missing crate `core`
   |             help: try using `std` instead of `core`: `std`

error[E0432]: unresolved import `core`
  --> ../rust-bitcoin/units/src/amount/serde.rs:92:13
   |
92 |         use core::fmt;
   |             ^^^^
   |             |
   |             you might be missing crate `core`
   |             help: try using `std` instead of `core`: `std`

error[E0432]: unresolved import `serde`
  --> ../rust-bitcoin/units/src/amount/serde.rs:95:13
   |
95 |         use serde::{de, Deserializer, Serializer};
   |             ^^^^^ use of unresolved module or unlinked crate `serde`
   |
help: you might be missing a crate named `serde`, add it to your project and import it in your code
   |
25 + extern crate serde;
   |

error[E0432]: unresolved import `crate::SignedAmount`
  --> ../rust-bitcoin/units/src/amount/serde.rs:97:13
   |
97 |         use crate::SignedAmount;
   |             ^^^^^^^^^^^^^^^^^^^ no `SignedAmount` in the root
   |
help: consider importing this unresolved item through its public re-export instead
   |
97 -         use crate::SignedAmount;
97 +         use as_sat::SignedAmount;
   |

error[E0405]: cannot find trait `TryFrom` in this scope
  --> ../rust-bitcoin/units/src/amount/serde.rs:77:12
   |
77 |         A: TryFrom<SignedAmount>,
   |            ^^^^^^^ not found in this scope
   |
   = note: 'std::convert::TryFrom' is included in the prelude starting in Edition 2021
help: consider importing this trait
   |
63 +     use std::convert::TryFrom;
   |

error[E0405]: cannot find trait `TryFrom` in this scope
  --> ../rust-bitcoin/units/src/amount/serde.rs:78:15
   |
78 |         <A as TryFrom<SignedAmount>>::Error: core::fmt::Display,
   |               ^^^^^^^ not found in this scope
   |
   = note: 'std::convert::TryFrom' is included in the prelude starting in Edition 2021
help: consider importing this trait
   |
63 +     use std::convert::TryFrom;
   |

error[E0405]: cannot find trait `TryFrom` in this scope
   --> ../rust-bitcoin/units/src/amount/serde.rs:115:16
    |
115 |             A: TryFrom<SignedAmount>,
    |                ^^^^^^^ not found in this scope
    |
    = note: 'std::convert::TryFrom' is included in the prelude starting in Edition 2021
help: consider importing this trait
    |
 92 +         use std::convert::TryFrom;
    |

error[E0405]: cannot find trait `TryFrom` in this scope
   --> ../rust-bitcoin/units/src/amount/serde.rs:116:19
    |
116 |             <A as TryFrom<SignedAmount>>::Error: core::fmt::Display,
    |                   ^^^^^^^ not found in this scope
    |
    = note: 'std::convert::TryFrom' is included in the prelude starting in Edition 2021
help: consider importing this trait
    |
 92 +         use std::convert::TryFrom;
    |

error[E0405]: cannot find trait `TryFrom` in this scope
   --> ../rust-bitcoin/units/src/amount/serde.rs:122:20
    |
122 |                 X: TryFrom<SignedAmount>,
    |                    ^^^^^^^ not found in this scope
    |
    = note: 'std::convert::TryFrom' is included in the prelude starting in Edition 2021
help: consider importing this trait
    |
 92 +         use std::convert::TryFrom;
    |

error[E0405]: cannot find trait `TryFrom` in this scope
   --> ../rust-bitcoin/units/src/amount/serde.rs:123:23
    |
123 |                 <X as TryFrom<SignedAmount>>::Error: core::fmt::Display,
    |                       ^^^^^^^ not found in this scope
    |
    = note: 'std::convert::TryFrom' is included in the prelude starting in Edition 2021
help: consider importing this trait
    |
 92 +         use std::convert::TryFrom;
    |

error[E0220]: associated type `Ok` not found for `S`
  --> ../rust-bitcoin/units/src/amount/serde.rs:67:66
   |
67 | ...: S) -> Result<S::Ok, S::Error>
   |                      ^^ associated type `Ok` not found

error[E0220]: associated type `Error` not found for `S`
  --> ../rust-bitcoin/units/src/amount/serde.rs:67:73
   |
67 | ...sult<S::Ok, S::Error>
   |                   ^^^^^ associated type `Error` not found

error[E0220]: associated type `Error` not found for `D`
  --> ../rust-bitcoin/units/src/amount/serde.rs:75:74
   |
75 | ...> Result<A, D::Error>
   |                   ^^^^^ associated type `Error` not found

error[E0220]: associated type `Ok` not found for `S`
   --> ../rust-bitcoin/units/src/amount/serde.rs:100:78
    |
100 | ... S) -> Result<S::Ok, S::Error>
    |                     ^^ associated type `Ok` not found

error[E0220]: associated type `Error` not found for `S`
   --> ../rust-bitcoin/units/src/amount/serde.rs:100:85
    |
100 | ...ult<S::Ok, S::Error>
    |                  ^^^^^ associated type `Error` not found

error[E0220]: associated type `Error` not found for `D`
   --> ../rust-bitcoin/units/src/amount/serde.rs:113:86
    |
113 | ...Option<A>, D::Error>
    |                  ^^^^^ associated type `Error` not found

error[E0223]: ambiguous associated type
   --> ../rust-bitcoin/units/src/amount/serde.rs:131:50
    |
131 |                 fn visit_none<E>(self) -> Result<Self::Value, E>
    |                                                  ^^^^^^^^^^^
    |
help: if there were a trait named `Example` with associated type `Value` implemented for `as_sat::opt::deserialize::VisitOptAmt<X>`, you could use the fully-qualified path
    |
131 -                 fn visit_none<E>(self) -> Result<Self::Value, E>
131 +                 fn visit_none<E>(self) -> Result<<as_sat::opt::deserialize::VisitOptAmt<X> as Example>::Value, E>
    |

error[E0223]: ambiguous associated type
   --> ../rust-bitcoin/units/src/amount/serde.rs:138:56
    |
138 | ...   fn visit_some<D>(self, d: D) -> Result<Self::Value, D::Error>
    |                                              ^^^^^^^^^^^
    |
help: if there were a trait named `Example` with associated type `Value` implemented for `as_sat::opt::deserialize::VisitOptAmt<X>`, you could use the fully-qualified path
    |
138 -                 fn visit_some<D>(self, d: D) -> Result<Self::Value, D::Error>
138 +                 fn visit_some<D>(self, d: D) -> Result<<as_sat::opt::deserialize::VisitOptAmt<X> as Example>::Value, D::Error>
    |

error[E0220]: associated type `Error` not found for `D`
   --> ../rust-bitcoin/units/src/amount/serde.rs:138:72
    |
138 | ...lf::Value, D::Error>
    |                  ^^^^^ associated type `Error` not found

error: aborting due to 21 previous errors

Some errors have detailed explanations: E0220, E0223, E0405, E0432, E0433.
For more information about an error, try `rustc --explain E0220`.
